fix overflow for day indicator

--- a/src/sass/gantt.scss
+++ b/src/sass/gantt.scss
@@ -1,6 +1,7 @@
 @import './variables';
 
 .rbc-gantt-view {
+  overflow: hidden;
 
   .rbc-time-header-cell {
     z-index: 100;
